--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.frontendmentor.io/profile/debargha10000">debargha10000</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/debargha10000" target="_blank">debargha10000</a>.
     </div>
   </main>
 
